fixed horizontal scroll issue at 1100px

--- a/styles/partials/_main-responsive.scss
+++ b/styles/partials/_main-responsive.scss
@@ -14,7 +14,7 @@
     .socials{
         transform: none;
         right: 305px;
-        bottom: 130px;
+        bottom: 120px;
     }
 }
 
@@ -28,17 +28,6 @@
     height: 370px;
     width: 340px;
     }
-
-    // .willow,
-    // .marvel,
-    // .video,
-    // .horror{
-    //     &__divide{
-    //         top: 51%;
-    //         left: 36%;
-    //         // width: 285px;
-    //     }
-    // }
 
     .marvel__divide{
         width: 305px;
@@ -58,5 +47,45 @@
 
     .willow__divide{
         left: 36%;
+    }
+}
+
+@media (max-width: 1150px){
+    .marvel__divide{
+        width: 320px;
+        left: 33%;
+    }
+
+    .video__divide{
+        width: 263px;
+        left: 36%;
+    }
+
+    .horror__divide{
+        width: 258px;
+        left: 36.4%;
+    }
+
+    .willow__divide{
+        left: 35%;
+    }
+}
+
+@media (max-width: 1100px){
+
+    .socials{
+        right: 195px;
+    }
+
+    .marvel__pic img,
+    .horror__pic img{
+        height: 90%;
+        margin-top: 25px;
+    }
+
+    .willow__pic img,
+    .video__pic img{
+        height: 91%;
+        margin-top: 25px;
     }
 }
