--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1014,7 +1014,7 @@ footer {
     -ms-transform: none;
     transform: none;
     right: 305px;
-    bottom: 130px; } }
+    bottom: 120px; } }
 
 @media (max-width: 1250px) {
   .oppenned .sub-menu {
@@ -1035,3 +1035,28 @@ footer {
     top: 53%; }
   .willow__divide {
     left: 36%; } }
+
+@media (max-width: 1150px) {
+  .marvel__divide {
+    width: 320px;
+    left: 33%; }
+  .video__divide {
+    width: 263px;
+    left: 36%; }
+  .horror__divide {
+    width: 258px;
+    left: 36.4%; }
+  .willow__divide {
+    left: 35%; } }
+
+@media (max-width: 1100px) {
+  .socials {
+    right: 195px; }
+  .marvel__pic img,
+  .horror__pic img {
+    height: 90%;
+    margin-top: 25px; }
+  .willow__pic img,
+  .video__pic img {
+    height: 91%;
+    margin-top: 25px; } }
